--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 		</dependency>
 
 
+		<!--引入bootstrap-->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
 		<!--引入jquery-webjar-->
 		<dependency>
 			<groupId>org.webjars</groupId>
