--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
 
 #\u65E5\u671F\u683C\u5F0F
-#spring.mvc.date-format=yyyy-MM-dd
+spring.mvc.date-format=yyyy-MM-dd HH:mm
+
+#\u5F00\u542F\u6CE8\u89E3  post\u8F6Cdelete
+spring.mvc.hiddenmethod.filter.enabled=true
