--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm
 
 #\u5F00\u542F\u6CE8\u89E3  post\u8F6Cdelete
 spring.mvc.hiddenmethod.filter.enabled=true
+
+#\u4FEE\u6539\u7AEF\u53E3\u53F7
+#server.port=8081
+
+server.tomcat.uri-encoding=utf-8
