--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #\u4FEE\u6539\u7AEF\u53E3\u53F7
-#server.port=8081
+server.port=8081
 
 server.tomcat.uri-encoding=utf-8
